# ICS_backend

./: .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  start-janus.sh
.github/: ci.yml
app/configs/: __init__.py  base_settings.py  database_settings.py
app/core/: auth.py  email.py
app/dtos/live/: live_request.py  live_response.py
app/dtos/user/: admin_user_add_request.py  admin_user_update_channel_request.py  user_login_response.py  user_password_reset_request.py  user_password_reset_response.py  user_profile_update_request.py  user_profile_update_response.py  user_signup_request.py  user_signup_response.py
app/models/: base_model.py  live_model.py  user_model.py
app/routers/: admin_router.py  live_router.py  user_router.py
app/services/: janus_service.py  live_service.py  user_service.py
migrations/models/: 1_20250513132439_add user_model.py  2_20250513162205_user_model username, email unique=True 값 추가, base_model id CharField -> IntField로 변경.py
migrations/modules/: 0_20250514135224_init.py  1_20250620113453_add_user_role_field.py
