[project]
name = "ics"
version = "0.1.0"
description = ""
authors = [
    {name = "jiwon",email = "realjiwon98@naver.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "tortoise-orm[asyncmy] (>=0.25.0,<0.26.0)",
    "aerich (>=0.8.2,<0.9.0)",
    "cryptography (>=44.0.3,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
coverage = "^7.8.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.12
strict = true
plugins = [
    "pydantic.mypy"
]
